# first-engine

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
code/: main.cpp
code/engine/: engine.cpp  engine.hpp
code/renderer/: renderer.cpp  renderer.hpp
code/scene/: scene.cpp  scene.hpp
